# Mia

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Cargo.toml  OVERNIGHT-DECISIONS.md  OVERNIGHT-SUMMARY.md  README.en.md  README.md  capacitor.config.json  electron-builder.mac-arm64.js  electron-builder.mac-intel.js  electron-builder.with-hermes.json  open-mia.cmd  open-mia.command  package-lock.json  package.json
.github/workflows/: build-engine-backups.yml  company-deploy.yml  publish-engine-backups.yml  publish-local-cloud-bundle.yml  publish-local-desktop-assets.yml  publish-release-assets-from-artifact.yml  release-win.yml
.superpowers/sdd/: final-review-fix-report.md  task-1-report.md  task-11-report.md  task-12-report.md  task-13-report.md  task-15-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md  task-7-report.md  task-8-report.md  task-9-report.md
android/app/: build.gradle
apps/mobile-rn/: .gitignore  AGENTS.md  App.tsx  DEVELOPMENT.md  app.config.ts  app.json  eas.json  google-services.json  package-lock.json  package.json  tsconfig.json
cloud/hermes-image/: Dockerfile  entrypoint.sh
crates/mia-core-api-types/: Cargo.toml
crates/mia-core-app/: Cargo.toml
crates/mia-core-app/src/: builtin_mcp.rs  claude_code_mia_proxy.rs  cloud_bridge.rs  codex_mia_proxy.rs  config.rs  cron_middleware.rs  cron_turn.rs  lib.rs  main.rs  memory_autowrite.rs  memory_runtime.rs  runtime.rs  scheduler.rs  services.rs  turn_execution.rs
crates/mia-core-app/src/router/: agent_command.rs  attachment.rs  bot.rs  cloud.rs  conversation.rs  engine.rs  health.rs  mcp.rs  mia.rs  mod.rs  realtime.rs  routes.rs  state.rs  system.rs  tasks.rs
crates/mia-core-app/tests/: builtin_mcp.rs  cron_middleware.rs  cron_turn.rs
crates/mia-core-bot/: Cargo.toml
crates/mia-core-bot/src/: lib.rs
crates/mia-core-bot/tests/: bot_service.rs
crates/mia-core-cloud/: Cargo.toml
crates/mia-core-cloud/src/: bridge.rs  events.rs  lib.rs
crates/mia-core-cloud/tests/: cloud_service.rs
crates/mia-core-common/: Cargo.toml
crates/mia-core-conversation/: Cargo.toml
crates/mia-core-conversation/src/: cron_protocol.rs  lib.rs
crates/mia-core-conversation/tests/: conversation_service.rs  cron_protocol.rs
crates/mia-core-db/: Cargo.toml
crates/mia-core-db/migrations/: 0001_initial.sql  0002_memory.sql  0003_bounded_memory.sql
crates/mia-core-db/src/: lib.rs
crates/mia-core-db/tests/: repositories.rs  schema.rs
crates/mia-core-mcp/: Cargo.toml
crates/mia-core-mcp/src/: connection_test.rs  lib.rs
crates/mia-core-mcp/tests/: mcp_service.rs
crates/mia-core-memory/: Cargo.toml
crates/mia-core-memory/src/: document.rs  legacy_import.rs  lib.rs  write_policy.rs
crates/mia-core-memory/tests/: memory_service.rs
crates/mia-core-realtime/: Cargo.toml
crates/mia-core-runtime/: Cargo.toml
crates/mia-core-runtime/src/: agent_engines.rs  hermes_gateway.rs  lib.rs  memory_isolation.rs  native_acp.rs  task_cache.rs
crates/mia-core-system/: Cargo.toml
crates/mia-core-system/src/: lib.rs
crates/mia-core-system/tests/: system_service.rs
crates/mia-core-tasks/: Cargo.toml
crates/mia-core-tasks/src/: lib.rs
crates/mia-core-tasks/tests/: task_service.rs
docs/: DEPLOYMENT.md  agent-reference-projects.md  cloud-deployment.md  first-release-checklist.md
docs/adr/: 2026-05-22-conversation-state-canonical-owner.md  2026-06-12-desktop-single-owner-daemon.md  2026-06-25-mia-core-runtime-owner.md  2026-07-07-aion-style-rust-core-backend.md
docs/releases/: 0.1.18.md  0.1.19.md  0.1.20.md  0.1.21.md  0.1.22.md  0.1.23.md  0.1.24.md  0.1.25.md  0.1.26.md  0.1.27.md  0.1.28.md  0.1.29.md  0.1.30.md  0.1.31.md  0.1.32.md  0.1.33.md  0.1.34.md  0.1.35.md  0.1.36.md  0.1.37.md  0.1.38.md  0.1.39.md  0.1.40.md  (+14 more)
scripts/: audit-cloud-productization.js  build-cloud-release.js  build-engine-backups.js  build-hermes-runtime.sh  build-mia-core-release.js  build-mobile-www.js  build-win.js  clean-release.js  create-mac-dmg.js  deploy-cloud-jms.sh  deploy-cloud-release.sh  desktop-release-notes.js  diagnose-deploy-ssh.js  doctor-cloud.js  install-cloud-release-local.sh  install-officecli-runtime.sh  jms-askpass.sh  local-agent-bridge.js  merge-engine-backups.js  mobile-update-manifest.js  notarize-mac-dmg.js  prepare-cloud-smoke-account.js  prepare-mia-core-rs.js  print-cloud-blockers.js  print-cloud-release-handoff.js  publish-desktop-web-downloads.js  publish-mac-update.js  publish-mia-core-release.js  publish-mobile-update.js  publish-win-update.js  reset-cloud-production-data.sh  resolve-mia-core-version.js  rotate-cloud-user-ids.js  serve-cloud.js  serve-web.js  smoke-cloud.js  smoke-desktop-permission.js  smoke-rust-core.js  smoke-win-runtime.js  stage-core-node.js  (+8 more)
skills/: README.md  catalog.zh.json
src/: check.js  main.js  permission-modes.js  pet-preload.js  preload.js  runtime-resource-paths.js
tests/: acp-agent-session.test.js  acp-engine-specs.test.js  afterpack-mia-core-helper.test.js  agent-command-provider.test.js  agent-context-budget.test.js  agent-engine-policy.test.js  agent-file-edit-events.test.js  agent-permission-coordinator.test.js  agent-permission-proxy.test.js  agent-prompt-messages.test.js  agent-runtime-profile-service.test.js  agent-session-contract.test.js  agent-session-index.test.js  agent-session-manager.test.js  agent-session-runtime-preparer.test.js  agent-session-skill-runtime.test.js  agent-session-store.test.js  app-scheduler-reminder.test.js  assistant-content-blocks.test.js  assistant-template.test.js  auth-service.test.js  auto-update-service.test.js  avatar-media.test.js  bot-commands.test.js  bot-conversations.test.js  bot-dialog-runtime.test.js  bot-directory.test.js  bot-execution-core.test.js  bot-invocation.test.js  bot-manager-contact-sort.test.js  bot-pet-service.test.js  bot-registry.test.js  bot-service.test.js  bot-session-source.test.js  bot-store-ui.test.js  bot-turn-context.test.js  bots-api.test.js  bots-store.test.js  build-mia-core-release.test.js  chat-attachment-core-adapter.test.js  (+337 more)
(+740 files in other folders)
