[package]
name = "mia-core-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mia-core"
path = "src/main.rs"

[dependencies]
mia-core-api-types.workspace = true
mia-core-bot.workspace = true
mia-core-cloud.workspace = true
mia-core-common.workspace = true
mia-core-conversation.workspace = true
mia-core-db.workspace = true
mia-core-memory.workspace = true
mia-core-mcp.workspace = true
mia-core-realtime.workspace = true
mia-core-runtime.workspace = true
mia-core-system.workspace = true
mia-core-tasks.workspace = true
anyhow.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
clap.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_yaml.workspace = true
tempfile.workspace = true
tower.workspace = true
