[package]
name = "mia-core-bot"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mia-core-api-types.workspace = true
mia-core-common.workspace = true
mia-core-db.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
