[package]
name = "mia-core-memory"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mia-core-api-types.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
mia-core-db.workspace = true
tokio.workspace = true
