[package]
name = "mia-core-tasks"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
mia-core-api-types.workspace = true
mia-core-db.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
